# lsc-utils

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  TODO.md  justfile
benches/: lsc_benches.rs
man/: lsc.1.ronn
scripts/: compare.sh  parity.sh
src/: cli.rs  lib.rs  main.rs  options.rs
src/config/: icons.rs  merge.rs  mod.rs  theme.rs
src/fs/: entry.rs  mod.rs  scan.rs  sort.rs
src/git/: mod.rs
src/render/: cell.rs  grid.rs  hyperlink.rs  long.rs  mod.rs  one_per_line.rs  tree.rs  width.rs
src/util/: human.rs  mod.rs  mode.rs  owner.rs  report.rs  time_fmt.rs
tests/: cli_basic.rs
